maps LPMiniMK3 controller

--- a/ClientApp/src/components/Launchpad.css
+++ b/ClientApp/src/components/Launchpad.css
@@ -2,7 +2,7 @@
   content: "";
   position: absolute;
   border-radius: 50%;
-  box-shadow: 0 0 21px 10px #fff, 0 0 20px 25px #EA580C, 0 0 0 32px #9B3907; 
+  box-shadow: 0 0 21px 10px #fff, 0 0 20px 25px #ea580c, 0 0 0 32px #9b3907;
 }
 
 .pad:after {
@@ -12,3 +12,6 @@
   box-shadow: 0 0 20px 5px #ffffff3d, 0 0 20px 20px #a3a3a3, 0 0 0 35px #0000001c;
 }
 
+.launchpad {
+  @apply w-max h-max p-7 mt-3 bg-black;
+}
